--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -8,34 +8,47 @@
     tools:context=".QuestionActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/questionTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="216dp"
+        android:paddingStart="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="50dp"
         android:text="Question"
-        android:textSize="36dp"
-        android:paddingBottom="50dp"/>
+        android:textSize="36dp" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/answer1"
+        android:layout_width="330dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:onClick="onClickAnswer"
         android:text="Button" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/answer2"
+        android:layout_width="330dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:onClick="onClickAnswer"
         android:text="Button" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/answer3"
+        android:layout_width="330dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:onClick="onClickAnswer"
         android:text="Button" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/answer4"
+        android:layout_width="330dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center_horizontal"
+        android:onClick="onClickAnswer"
         android:text="Button" />
 </LinearLayout>
