fixed play online to only work once some text is entered to the game ID field

--- a/app/src/main/res/xml/activity_main_menu_scene.xml
+++ b/app/src/main/res/xml/activity_main_menu_scene.xml
@@ -115,8 +115,5 @@
     <Transition
         motion:constraintSetStart="@+id/start"
         motion:constraintSetEnd="@+id/end"
-        motion:duration="300">
-        <OnClick motion:clickAction="transitionToEnd"
-            motion:targetId="@id/play_online" />
-    </Transition>
+        motion:duration="300"></Transition>
 </MotionScene>
