Questions: added API for randomly generated questions raised question amount per game to 10 randomly shuffle button answers Main Menu: overrode phone back when in play online UI to go back to main menu gave editprofile button ability for user to chose a photo from device files (picture is temporary and currently resets when app restarts) Results Screen: temporarily redid how much of the bar fills up to account for the greater question count

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -79,7 +79,10 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="124dp"
         android:backgroundTint="#00FFFFFF"
+        android:outlineAmbientShadowColor="#00FFFFFF"
+        android:outlineSpotShadowColor="#00FFFFFF"
         android:scaleType="fitCenter"
+        android:translationZ="10dp"
         app:layout_constraintStart_toStartOf="@+id/playerIcon"
         app:layout_constraintTop_toTopOf="@+id/playerIcon"
         app:srcCompat="@android:drawable/ic_menu_edit" />
