--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -4,18 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="bottom"
     android:orientation="vertical"
     tools:context=".QuestionActivity">
 
     <TextView
         android:id="@+id/questionTextView"
         android:layout_width="match_parent"
-        android:layout_height="216dp"
-        android:paddingStart="20dp"
-        android:paddingTop="10dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="30dp"
+        android:paddingTop="30dp"
+        android:paddingRight="30dp"
         android:paddingBottom="50dp"
-        android:text="Question"
         android:textSize="36dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="121dp" />
 
     <Button
         android:id="@+id/answer1"
@@ -23,8 +28,7 @@
         android:layout_height="75dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        android:onClick="onClickAnswer"
-        android:text="Button" />
+        android:onClick="onClickAnswer" />
 
     <Button
         android:id="@+id/answer2"
@@ -32,8 +36,7 @@
         android:layout_height="75dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        android:onClick="onClickAnswer"
-        android:text="Button" />
+        android:onClick="onClickAnswer" />
 
     <Button
         android:id="@+id/answer3"
@@ -41,14 +44,13 @@
         android:layout_height="75dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        android:onClick="onClickAnswer"
-        android:text="Button" />
+        android:onClick="onClickAnswer" />
 
     <Button
         android:id="@+id/answer4"
         android:layout_width="330dp"
         android:layout_height="75dp"
         android:layout_gravity="center_horizontal"
-        android:onClick="onClickAnswer"
-        android:text="Button" />
+        android:layout_marginBottom="120dp"
+        android:onClick="onClickAnswer" />
 </LinearLayout>
