--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -42,7 +42,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/ic_settings"
         android:text="@string/settings"
-        android:tint="@color/blue_grey"
+        android:tint="?attr/colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -57,7 +57,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/ic_inventory"
         android:text="@string/inventory"
-        android:tint="@color/blue_grey"
+        android:tint="?attr/colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -122,7 +122,7 @@
         android:alpha="0"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
-        android:tint="@color/blue_grey"
+        android:tint="?attr/colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_back"
