--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,16 @@
     <color name="charcoal">#122620</color>
     <color name="gold">#D6AD60</color>
 
+    <!-- New Beginnings -->
+    <color name="ivory">#EDE7D0</color>
+    <color name="peach">#FDCD93</color>
+    <color name="forest_green">#034F39</color>
+    <color name="emerald_green">#549369</color>
+
+    <!-- Deep Merlot -->
+    <color name="rose_quartz">#F3E3E2</color>
+    <color name="rose_red">#74112F</color>
+    <color name="dark_blue_merlot">#0C0C1E</color>
+    <color name="midnight_blue">#1B2E3C</color>
+
 </resources>
