--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -24,6 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -31,6 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -38,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -45,7 +48,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
+
         </TableRow>
 
         <TableRow
@@ -59,6 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -66,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -73,6 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -80,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
         </TableRow>
 
@@ -94,6 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -101,6 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -108,6 +119,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -115,6 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
         </TableRow>
 
@@ -129,6 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -136,6 +150,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -143,6 +158,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
@@ -150,6 +166,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
         </TableRow>
     </TableLayout>
@@ -165,4 +182,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
