--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -19,9 +19,10 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="377dp"
+        android:layout_width="wrap_content"
+        android:layout_height="366dp"
         android:layout_marginTop="144dp"
+        app:layout_constraintBottom_toTopOf="@+id/redeemPrizesButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -38,31 +39,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
 
             <TableRow
@@ -73,31 +68,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
 
             <TableRow
@@ -108,31 +97,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
 
             <TableRow
@@ -143,31 +126,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
 
             <TableRow
@@ -178,31 +155,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
 
             <TableRow
@@ -213,136 +184,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/imageButton5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/imageButton9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
-
-                <ImageButton
-                    android:id="@+id/imageButton12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
 
             <TableRow
@@ -353,31 +213,25 @@
 
                 <ImageButton
                     android:id="@+id/imageButton13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton14"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
                 <ImageButton
                     android:id="@+id/imageButton15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginHorizontal="10dp"
                     app:srcCompat="@android:drawable/ic_lock_lock" />
 
-                <ImageButton
-                    android:id="@+id/imageButton16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    app:srcCompat="@android:drawable/ic_lock_lock" />
             </TableRow>
         </TableLayout>
     </ScrollView>
