--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -57,35 +57,9 @@
         android:scaleType="fitCenter"
         android:src="@drawable/ic_inventory"
         android:text="@string/inventory"
-        android:tint="?attr/colorPrimaryVariant"
+        app:tint="?attr/colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-        android:id="@+id/playerIcon"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/play_solo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <ImageButton
-        android:id="@+id/editIconButton"
-        android:layout_width="64dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="124dp"
-        android:backgroundTint="#00FFFFFF"
-        android:outlineAmbientShadowColor="#00FFFFFF"
-        android:outlineSpotShadowColor="#00FFFFFF"
-        android:scaleType="fitCenter"
-        android:translationZ="10dp"
-        app:layout_constraintStart_toStartOf="@+id/playerIcon"
-        app:layout_constraintTop_toTopOf="@+id/playerIcon"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <Button
         android:id="@+id/hostButton"
@@ -122,10 +96,48 @@
         android:alpha="0"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
-        android:tint="?attr/colorPrimaryVariant"
+        app:tint="?attr/colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_back"
         tools:visibility="invisible" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="210dp"
+        android:layout_height="210dp"
+        android:layout_marginBottom="50dp"
+        app:cardCornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/play_solo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/playerIcon"
+            android:layout_width="210dp"
+            android:layout_height="210dp"
+            android:layout_marginBottom="48dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/play_solo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@color/material_dynamic_neutral30"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <ImageButton
+            android:id="@+id/editIconButton"
+            android:layout_width="64dp"
+            android:layout_height="62dp"
+            android:layout_marginStart="152dp"
+            android:layout_marginTop="156dp"
+            android:backgroundTint="#00FFFFFF"
+            android:outlineAmbientShadowColor="#00FFFFFF"
+            android:outlineSpotShadowColor="#00FFFFFF"
+            android:scaleType="fitCenter"
+            android:translationZ="10dp"
+            app:layout_constraintStart_toStartOf="@+id/playerIcon"
+            app:layout_constraintTop_toTopOf="@+id/playerIcon"
+            app:srcCompat="@android:drawable/ic_menu_edit" />
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
