--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,16 +28,34 @@
     <color name="charcoal">#122620</color>
     <color name="gold">#D6AD60</color>
 
-    <!-- New Beginnings -->
-    <color name="ivory">#EDE7D0</color>
-    <color name="peach">#FDCD93</color>
-    <color name="forest_green">#034F39</color>
-    <color name="emerald_green">#549369</color>
+    <!-- Grazing Zebras -->
+    <color name="ivory">#EFF0EC</color>
+    <color name="sand_dollar">#C6BCAB</color>
+    <color name="seafoam_green">#8BE5AD</color>
+    <color name="green_charcoal">#282D30</color>
 
     <!-- Deep Merlot -->
     <color name="rose_quartz">#F3E3E2</color>
     <color name="rose_red">#74112F</color>
     <color name="dark_blue_merlot">#0C0C1E</color>
     <color name="midnight_blue">#1B2E3C</color>
+
+    <!-- Bamboo Beach -->
+    <color name="bamboo_cream">#FBF6F3</color>
+    <color name="tangerine">#FEB06A</color>
+    <color name="turquoise">#36D6E7</color>
+    <color name="bamboo_blue_grey">#5D6C89</color>
+
+    <!-- Sugar Frosted Desert -->
+    <color name="sugar_seafoam_green">#ECFDF1</color>
+    <color name="mint">#B4F8C8</color>
+    <color name="beige">#D1BC9F</color>
+    <color name="sugar_rose_red">#E54E7F</color>
+
+    <!-- Sugar Frosted Desert -->
+    <color name="purple">#C55FFC</color>
+    <color name="purple_haze">#EFDCF9</color>
+    <color name="purple_charcoal">#323E42</color>
+    <color name="violoet">#7954A1</color>
 
 </resources>
