--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -32,13 +32,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerRecView"
-        android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/startGame"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHeight_max="350dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameID" />
 
     <TextView
         android:id="@+id/gameIDPrompt"
