--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -20,35 +20,33 @@
             android:gravity="center">
 
             <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/mainThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#9490ADC6"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/goldThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8CB68D40"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/greenThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8C8BE5AD"
                 android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
-
-            <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
         </TableRow>
@@ -60,36 +58,35 @@
             android:gravity="center">
 
             <ImageButton
-                android:id="@+id/imageButton5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/redThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8C74112F"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
-                android:id="@+id/imageButton6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/bambooThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8C36D6E7"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
-                android:id="@+id/imageButton7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/sugarThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8CE54E7F"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
-            <ImageButton
-                android:id="@+id/imageButton8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
         </TableRow>
 
         <TableRow
@@ -99,76 +96,33 @@
             android:gravity="center">
 
             <ImageButton
-                android:id="@+id/imageButton9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/purpleThemeButton"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
+                android:backgroundTint="#8C7954A1"
                 android:contentDescription="@string/locked_item"
+                android:onClick="changeTheme"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
                 android:id="@+id/imageButton10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
                 android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
             <ImageButton
                 android:id="@+id/imageButton11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginHorizontal="10dp"
                 android:contentDescription="@string/locked_item"
                 app:srcCompat="@android:drawable/ic_lock_lock" />
 
-            <ImageButton
-                android:id="@+id/imageButton12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:gravity="center">
-
-            <ImageButton
-                android:id="@+id/imageButton13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
-
-            <ImageButton
-                android:id="@+id/imageButton14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
-
-            <ImageButton
-                android:id="@+id/imageButton15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
-
-            <ImageButton
-                android:id="@+id/imageButton16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:contentDescription="@string/locked_item"
-                app:srcCompat="@android:drawable/ic_lock_lock" />
-        </TableRow>
     </TableLayout>
 
     <Button
